parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    ENTERO_NEG
    ALTER
    ORDER
    DECLARE
    ISEQUAL
    CURSOR
    MINUS
    COLON
    FOR
    HASHTAG
    ADD
    LESSEQUAL
    DATABASE
    RBLOCK
    USE
    ENTERO_POS
    GREATEREQUAL
    STRING
    LBLOCK
    MINUSMINUS
    DATE2
    DEQUAL
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> sql_list
Rule 2     sql_list -> sql SEMICOLON
Rule 3     sql_list -> sql_list sql SEMICOLON
Rule 4     sql -> schema
Rule 5     sql -> manipulative_statement
Rule 6     sql -> schema_element
Rule 7     schema -> CREATE SCHEMA AUTHORIZATION user opt_schema_element_list
Rule 8     user -> NAME
Rule 9     opt_schema_element_list -> <empty>
Rule 10    opt_schema_element_list -> schema_element_list
Rule 11    schema_element_list -> schema_element
Rule 12    schema_element_list -> schema_element_list schema_element
Rule 13    schema_element -> base_table_def
Rule 14    schema_element -> view_def
Rule 15    schema_element -> privilege_def
Rule 16    base_table_def -> CREATE TABLE table LPAREN base_table_element_commalist RPAREN
Rule 17    constraint_def -> CONSTRAINT NAME table_constraint_def
Rule 18    table -> NAME
Rule 19    table -> NAME DOT NAME
Rule 20    base_table_element_commalist -> base_table_element
Rule 21    base_table_element_commalist -> base_table_element_commalist COMMA base_table_element
Rule 22    base_table_element -> column_def
Rule 23    base_table_element -> constraint_def
Rule 24    base_table_element -> table_constraint_def
Rule 25    literal -> literal NAME2
Rule 26    literal -> NAME2
Rule 27    literal -> NAME
Rule 28    literal -> literal NUMBER
Rule 29    literal -> NUMBER
Rule 30    column_def -> column data_type column_def_opt_list
Rule 31    identity -> LPAREN literal COMMA literal RPAREN
Rule 32    data_type -> CHAR
Rule 33    data_type -> INT IDENTITY identity
Rule 34    data_type -> CHAR LPAREN NUMBER RPAREN
Rule 35    data_type -> VARCHAR
Rule 36    data_type -> VARCHAR LPAREN NUMBER RPAREN
Rule 37    data_type -> INT
Rule 38    data_type -> FLOAT
Rule 39    data_type -> DOUBLE
Rule 40    column_def_opt_list -> column_def_opt_list column_def_opt
Rule 41    column_def_opt_list -> column_def_opt
Rule 42    column_def_opt -> <empty>
Rule 43    column_def_opt -> NOT NULL
Rule 44    column_def_opt -> NULL
Rule 45    column_def_opt -> NOT NULL UNIQUE
Rule 46    column_def_opt -> NOT NULL PRIMARY KEY
Rule 47    column_def_opt -> DEFAULT literal
Rule 48    column_def_opt -> DEFAULT NULL
Rule 49    column_def_opt -> DEFAULT USER
Rule 50    column_def_opt -> CHECK LPAREN search_condition RPAREN
Rule 51    column_def_opt -> REFERENCES table
Rule 52    column_def_opt -> REFERENCES table LPAREN column_commalist RPAREN
Rule 53    table_constraint_def -> UNIQUE LPAREN column_commalist RPAREN
Rule 54    table_constraint_def -> PRIMARY KEY LPAREN column_commalist RPAREN
Rule 55    table_constraint_def -> FOREIGN KEY LPAREN column_commalist RPAREN REFERENCES table
Rule 56    table_constraint_def -> FOREIGN KEY LPAREN column_commalist RPAREN REFERENCES table LPAREN column_commalist RPAREN
Rule 57    table_constraint_def -> CHECK LPAREN search_condition RPAREN
Rule 58    column_commalist -> column
Rule 59    column_commalist -> column_commalist COMMA column
Rule 60    column -> NAME
Rule 61    view_def -> CREATE VIEW table opt_column_commalist AS query_spec opt_with_check_option
Rule 62    opt_with_check_option -> <empty>
Rule 63    opt_with_check_option -> WITH CHECK OPTION
Rule 64    opt_column_commalist -> <empty>
Rule 65    opt_column_commalist -> LPAREN column_commalist RPAREN
Rule 66    privilege_def -> GRANT privileges ON table TO grantee_commalist opt_with_grant_option
Rule 67    opt_with_grant_option -> <empty>
Rule 68    opt_with_grant_option -> WITH GRANT OPTION
Rule 69    privileges -> ALL PRIVILEGES
Rule 70    privileges -> ALL
Rule 71    privileges -> operation_commalist
Rule 72    operation_commalist -> operation
Rule 73    operation_commalist -> operation_commalist COMMA operation
Rule 74    operation -> SELECT
Rule 75    operation -> INSERT
Rule 76    operation -> DELETE
Rule 77    operation -> UPDATE opt_column_commalist
Rule 78    operation -> REFERENCES opt_column_commalist
Rule 79    grantee_commalist -> grantee
Rule 80    grantee_commalist -> grantee_commalist COMMA grantee
Rule 81    grantee -> PUBLIC
Rule 82    grantee -> user
Rule 83    ordering_spec_commalist -> ordering_spec
Rule 84    ordering_spec_commalist -> ordering_spec_commalist COMMA ordering_spec
Rule 85    ordering_spec -> NUMBER opt_asc_desc
Rule 86    ordering_spec -> column_ref opt_asc_desc
Rule 87    opt_asc_desc -> <empty>
Rule 88    opt_asc_desc -> ASC
Rule 89    opt_asc_desc -> DESC
Rule 90    cursor -> NAME
Rule 91    column_ref -> NAME
Rule 92    column_ref -> NAME DOT NAME
Rule 93    column_ref -> NAME DOT NAME DOT NAME
Rule 94    manipulative_statement -> close_statement
Rule 95    manipulative_statement -> commit_statement
Rule 96    manipulative_statement -> delete_statement_positioned
Rule 97    manipulative_statement -> delete_statement_searched
Rule 98    manipulative_statement -> fetch_statement
Rule 99    manipulative_statement -> insert_statement
Rule 100   manipulative_statement -> open_statement
Rule 101   manipulative_statement -> rollback_statement
Rule 102   manipulative_statement -> select_statement
Rule 103   manipulative_statement -> update_statement_positioned
Rule 104   manipulative_statement -> select_statement_1
Rule 105   manipulative_statement -> select_statement_3
Rule 106   manipulative_statement -> update_statement_searched
Rule 107   manipulative_statement -> drop_table
Rule 108   table -> ID
Rule 109   table -> ID DOT ID
Rule 110   drop_table -> DROP TABLE table
Rule 111   open_statement -> OPEN cursor
Rule 112   close_statement -> CLOSE cursor
Rule 113   commit_statement -> COMMIT WORK
Rule 114   rollback_statement -> ROLLBACK WORK
Rule 115   delete_statement_positioned -> DELETE FROM table WHERE CURRENT OF cursor
Rule 116   fetch_statement -> FETCH cursor INTO target_commalist
Rule 117   target_commalist -> target
Rule 118   target_commalist -> target_commalist COMMA target
Rule 119   target -> parameter_ref
Rule 120   parameter_ref -> parameter
Rule 121   parameter_ref -> parameter_ref parameter
Rule 122   parameter_ref -> parameter INDICATOR parameter
Rule 123   parameter -> NAME
Rule 124   insert_statement -> INSERT INTO table opt_column_commalist values_or_query_spec
Rule 125   values_or_query_spec -> VALUES LPAREN insert_atom_commalist RPAREN
Rule 126   values_or_query_spec -> query_spec
Rule 127   insert_atom_commalist -> insert_atom
Rule 128   insert_atom_commalist -> insert_atom_commalist COMMA insert_atom
Rule 129   insert_atom -> atom
Rule 130   insert_atom -> NULL
Rule 131   atom -> QUOTE parameter_ref QUOTE
Rule 132   atom -> QUOTE literal QUOTE
Rule 133   atom -> NUMBER
Rule 134   atom -> QUOTE DATE1 QUOTE
Rule 135   atom -> QUOTE USER QUOTE
Rule 136   delete_statement_searched -> DELETE FROM table opt_where_clause
Rule 137   opt_where_clause -> <empty>
Rule 138   opt_where_clause -> where_clause
Rule 139   where_clause -> search_condition
Rule 140   select_statement_1 -> SELECT TIMES FROM table WHERE assignment_commalist assign_cond
Rule 141   select_statement_3 -> SELECT TIMES FROM table PLUSPLUS
Rule 142   assign_cond -> assign_cond cond assignment_commalist
Rule 143   assign_cond -> cond assignment_commalist
Rule 144   update_statement_positioned -> UPDATE table SET assignment_commalist WHERE assignment_commalist assign_cond
Rule 145   cond -> cond OR
Rule 146   cond -> cond AND
Rule 147   cond -> cond AMPERSANT AMPERSANT
Rule 148   cond -> AND
Rule 149   cond -> OR
Rule 150   cond -> AMPERSANT AMPERSANT
Rule 151   assignment_commalist -> assignment
Rule 152   assignment_commalist -> assignment_commalist COMMA assignment
Rule 153   assignment -> column EQUAL scalar_exp
Rule 154   assignment -> LPAREN assignment_commalist AMPERSANT AMPERSANT assignment_commalist RPAREN
Rule 155   assignment -> column LESS scalar_exp
Rule 156   assignment -> column GREATER scalar_exp
Rule 157   assignment -> column EQUAL NULL
Rule 158   update_statement_searched -> UPDATE table SET assignment_commalist opt_where_clause
Rule 159   scalar_exp -> scalar_exp PLUS scalar_exp
Rule 160   scalar_exp -> scalar_exp EQUAL scalar_exp
Rule 161   scalar_exp -> scalar_exp TIMES scalar_exp
Rule 162   scalar_exp -> scalar_exp DIVIDE scalar_exp
Rule 163   scalar_exp -> atom
Rule 164   scalar_exp -> column_ref
Rule 165   scalar_exp -> function_ref
Rule 166   scalar_exp -> LPAREN scalar_exp RPAREN
Rule 167   scalar_exp_commalist -> scalar_exp
Rule 168   scalar_exp_commalist -> scalar_exp_commalist COMMA scalar_exp
Rule 169   function_ref -> AMMSC LPAREN TIMES RPAREN
Rule 170   function_ref -> AMMSC LPAREN DISTINCT column_ref RPAREN
Rule 171   function_ref -> AMMSC LPAREN ALL scalar_exp RPAREN
Rule 172   function_ref -> AMMSC LPAREN scalar_exp RPAREN
Rule 173   select_statement -> SELECT opt_all_distinct selection INTO target_commalist table_exp
Rule 174   opt_all_distinct -> <empty>
Rule 175   opt_all_distinct -> ALL
Rule 176   opt_all_distinct -> DISTINCT
Rule 177   selection -> scalar_exp_commalist
Rule 178   selection -> TIMES
Rule 179   query_exp -> query_term
Rule 180   query_exp -> query_exp UNION query_term
Rule 181   query_exp -> query_exp UNION ALL query_term
Rule 182   query_term -> query_spec
Rule 183   query_term -> LPAREN query_exp RPAREN
Rule 184   query_spec -> SELECT opt_all_distinct FROM selection table_exp
Rule 185   table_exp -> from_clause
Rule 186   table_exp -> opt_where_clause
Rule 187   table_exp -> opt_group_by_clause
Rule 188   from_clause -> FROM table_ref_commalist
Rule 189   table_ref_commalist -> table_ref
Rule 190   table_ref_commalist -> table_ref_commalist COMMA table_ref
Rule 191   table_ref -> table
Rule 192   table_ref -> table range_variable
Rule 193   range_variable -> NAME
Rule 194   opt_group_by_clause -> <empty>
Rule 195   opt_group_by_clause -> GROUP BY column_ref_commalist
Rule 196   column_ref_commalist -> column_ref
Rule 197   column_ref_commalist -> column_ref_commalist COMMA column_ref
Rule 198   search_condition -> search_condition OR search_condition
Rule 199   search_condition -> search_condition AND search_condition
Rule 200   search_condition -> NOT search_condition
Rule 201   search_condition -> LPAREN search_condition RPAREN
Rule 202   search_condition -> predicate
Rule 203   predicate -> comparison_predicate
Rule 204   predicate -> between_predicate
Rule 205   predicate -> like_predicate
Rule 206   predicate -> test_for_null
Rule 207   predicate -> in_predicate
Rule 208   predicate -> all_cr_any_predicate
Rule 209   predicate -> existence_test
Rule 210   comparison_predicate -> scalar_exp COMPARISON scalar_exp
Rule 211   comparison_predicate -> scalar_exp COMPARISON subquery
Rule 212   between_predicate -> scalar_exp NOT BETWEEN scalar_exp AND scalar_exp
Rule 213   between_predicate -> scalar_exp BETWEEN scalar_exp AND scalar_exp
Rule 214   like_predicate -> scalar_exp NOT LIKE atom opt_escape
Rule 215   like_predicate -> scalar_exp LIKE atom opt_escape
Rule 216   opt_escape -> <empty>
Rule 217   test_for_null -> column_ref IS NOT NULL
Rule 218   test_for_null -> column_ref IS NULL
Rule 219   in_predicate -> scalar_exp NOT IN LPAREN subquery RPAREN
Rule 220   in_predicate -> scalar_exp IN LPAREN subquery RPAREN
Rule 221   in_predicate -> scalar_exp NOT IN LPAREN atom_commalist RPAREN
Rule 222   in_predicate -> scalar_exp IN LPAREN atom_commalist RPAREN
Rule 223   atom_commalist -> atom
Rule 224   atom_commalist -> atom_commalist COMMA atom
Rule 225   all_cr_any_predicate -> scalar_exp COMPARISON any_all_some subquery
Rule 226   any_all_some -> ANY
Rule 227   any_all_some -> ALL
Rule 228   any_all_some -> SOME
Rule 229   existence_test -> EXISTS subquery
Rule 230   subquery -> LPAREN SELECT opt_all_distinct selection table_exp RPAREN

Terminals, with rules where they appear

ADD                  : 
ALL                  : 69 70 171 175 181 227
ALTER                : 
AMMSC                : 169 170 171 172
AMPERSANT            : 147 147 150 150 154 154
AND                  : 146 148 199 212 213
ANY                  : 226
AS                   : 61
ASC                  : 88
AUTHORIZATION        : 7
BETWEEN              : 212 213
BY                   : 195
CHAR                 : 32 34
CHECK                : 50 57 63
CLOSE                : 112
COLON                : 
COMMA                : 21 31 59 73 80 84 118 128 152 168 190 197 224
COMMIT               : 113
COMPARISON           : 210 211 225
CONSTRAINT           : 17
CREATE               : 7 16 61
CURRENT              : 115
CURSOR               : 
DATABASE             : 
DATE1                : 134
DATE2                : 
DECLARE              : 
DEFAULT              : 47 48 49
DELETE               : 76 115 136
DEQUAL               : 
DESC                 : 89
DISTINCT             : 170 176
DIVIDE               : 162
DOT                  : 19 92 93 93 109
DOUBLE               : 39
DROP                 : 110
ENTERO_NEG           : 
ENTERO_POS           : 
EQUAL                : 153 157 160
EXISTS               : 229
FETCH                : 116
FLOAT                : 38
FOR                  : 
FOREIGN              : 55 56
FROM                 : 115 136 140 141 184 188
GRANT                : 66 68
GREATER              : 156
GREATEREQUAL         : 
GROUP                : 195
HASHTAG              : 
ID                   : 108 109 109
IDENTITY             : 33
IN                   : 219 220 221 222
INDICATOR            : 122
INSERT               : 75 124
INT                  : 33 37
INTO                 : 116 124 173
IS                   : 217 218
ISEQUAL              : 
KEY                  : 46 54 55 56
LBLOCK               : 
LBRACKET             : 
LESS                 : 155
LESSEQUAL            : 
LIKE                 : 214 215
LPAREN               : 16 31 34 36 50 52 53 54 55 56 56 57 65 125 154 166 169 170 171 172 183 201 219 220 221 222 230
MINUS                : 
MINUSMINUS           : 
NAME                 : 8 17 18 19 19 27 60 90 91 92 92 93 93 93 123 193
NAME2                : 25 26
NOT                  : 43 45 46 200 212 214 217 219 221
NULL                 : 43 44 45 46 48 130 157 217 218
NUMBER               : 28 29 34 36 85 133
OF                   : 115
ON                   : 66
OPEN                 : 111
OPTION               : 63 68
OR                   : 145 149 198
ORDER                : 
PLUS                 : 159
PLUSPLUS             : 141
PRIMARY              : 46 54
PRIVILEGES           : 69
PUBLIC               : 81
QUOTE                : 131 131 132 132 134 134 135 135
RBLOCK               : 
RBRACKET             : 
REFERENCES           : 51 52 55 56 78
ROLLBACK             : 114
RPAREN               : 16 31 34 36 50 52 53 54 55 56 56 57 65 125 154 166 169 170 171 172 183 201 219 220 221 222 230
SCHEMA               : 7
SELECT               : 74 140 141 173 184 230
SEMICOLON            : 2 3
SET                  : 144 158
SOME                 : 228
STRING               : 
TABLE                : 16 110
TIMES                : 140 141 161 169 178
TO                   : 66
UNION                : 180 181
UNIQUE               : 45 53
UPDATE               : 77 144 158
USE                  : 
USER                 : 49 135
VALUES               : 125
VARCHAR              : 35 36
VIEW                 : 61
WHERE                : 115 140 144
WITH                 : 63 68
WORK                 : 113 114
error                : 

Nonterminals, with rules where they appear

all_cr_any_predicate : 208
any_all_some         : 225
assign_cond          : 140 142 144
assignment           : 151 152
assignment_commalist : 140 142 143 144 144 152 154 154 158
atom                 : 129 163 214 215 223 224
atom_commalist       : 221 222 224
base_table_def       : 13
base_table_element   : 20 21
base_table_element_commalist : 16 21
between_predicate    : 204
close_statement      : 94
column               : 30 58 59 153 155 156 157
column_commalist     : 52 53 54 55 56 56 59 65
column_def           : 22
column_def_opt       : 40 41
column_def_opt_list  : 30 40
column_ref           : 86 164 170 196 197 217 218
column_ref_commalist : 195 197
commit_statement     : 95
comparison_predicate : 203
cond                 : 142 143 145 146 147
constraint_def       : 23
cursor               : 111 112 115 116
data_type            : 30
delete_statement_positioned : 96
delete_statement_searched : 97
drop_table           : 107
existence_test       : 209
fetch_statement      : 98
from_clause          : 185
function_ref         : 165
grantee              : 79 80
grantee_commalist    : 66 80
identity             : 33
in_predicate         : 207
insert_atom          : 127 128
insert_atom_commalist : 125 128
insert_statement     : 99
like_predicate       : 205
literal              : 25 28 31 31 47 132
manipulative_statement : 5
open_statement       : 100
operation            : 72 73
operation_commalist  : 71 73
opt_all_distinct     : 173 184 230
opt_asc_desc         : 85 86
opt_column_commalist : 61 77 78 124
opt_escape           : 214 215
opt_group_by_clause  : 187
opt_schema_element_list : 7
opt_where_clause     : 136 158 186
opt_with_check_option : 61
opt_with_grant_option : 66
ordering_spec        : 83 84
ordering_spec_commalist : 84
parameter            : 120 121 122 122
parameter_ref        : 119 121 131
predicate            : 202
privilege_def        : 15
privileges           : 66
program              : 0
query_exp            : 180 181 183
query_spec           : 61 126 182
query_term           : 179 180 181
range_variable       : 192
rollback_statement   : 101
scalar_exp           : 153 155 156 159 159 160 160 161 161 162 162 166 167 168 171 172 210 210 211 212 212 212 213 213 213 214 215 219 220 221 222 225
scalar_exp_commalist : 168 177
schema               : 4
schema_element       : 6 11 12
schema_element_list  : 10 12
search_condition     : 50 57 139 198 198 199 199 200 201
select_statement     : 102
select_statement_1   : 104
select_statement_3   : 105
selection            : 173 184 230
sql                  : 2 3
sql_list             : 1 3
subquery             : 211 219 220 225 229
table                : 16 51 52 55 56 61 66 110 115 124 136 140 141 144 158 191 192
table_constraint_def : 17 24
table_exp            : 173 184 230
table_ref            : 189 190
table_ref_commalist  : 188 190
target               : 117 118
target_commalist     : 116 118 173
test_for_null        : 206
update_statement_positioned : 103
update_statement_searched : 106
user                 : 7 82
values_or_query_spec : 124
view_def             : 14
where_clause         : 138

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sql_list
    (2) sql_list -> . sql SEMICOLON
    (3) sql_list -> . sql_list sql SEMICOLON
    (4) sql -> . schema
    (5) sql -> . manipulative_statement
    (6) sql -> . schema_element
    (7) schema -> . CREATE SCHEMA AUTHORIZATION user opt_schema_element_list
    (94) manipulative_statement -> . close_statement
    (95) manipulative_statement -> . commit_statement
    (96) manipulative_statement -> . delete_statement_positioned
    (97) manipulative_statement -> . delete_statement_searched
    (98) manipulative_statement -> . fetch_statement
    (99) manipulative_statement -> . insert_statement
    (100) manipulative_statement -> . open_statement
    (101) manipulative_statement -> . rollback_statement
    (102) manipulative_statement -> . select_statement
    (103) manipulative_statement -> . update_statement_positioned
    (104) manipulative_statement -> . select_statement_1
    (105) manipulative_statement -> . select_statement_3
    (106) manipulative_statement -> . update_statement_searched
    (107) manipulative_statement -> . drop_table
    (13) schema_element -> . base_table_def
    (14) schema_element -> . view_def
    (15) schema_element -> . privilege_def
    (112) close_statement -> . CLOSE cursor
    (113) commit_statement -> . COMMIT WORK
    (115) delete_statement_positioned -> . DELETE FROM table WHERE CURRENT OF cursor
    (136) delete_statement_searched -> . DELETE FROM table opt_where_clause
    (116) fetch_statement -> . FETCH cursor INTO target_commalist
    (124) insert_statement -> . INSERT INTO table opt_column_commalist values_or_query_spec
    (111) open_statement -> . OPEN cursor
    (114) rollback_statement -> . ROLLBACK WORK
    (173) select_statement -> . SELECT opt_all_distinct selection INTO target_commalist table_exp
    (144) update_statement_positioned -> . UPDATE table SET assignment_commalist WHERE assignment_commalist assign_cond
    (140) select_statement_1 -> . SELECT TIMES FROM table WHERE assignment_commalist assign_cond
    (141) select_statement_3 -> . SELECT TIMES FROM table PLUSPLUS
    (158) update_statement_searched -> . UPDATE table SET assignment_commalist opt_where_clause
    (110) drop_table -> . DROP TABLE table
    (16) base_table_def -> . CREATE TABLE table LPAREN base_table_element_commalist RPAREN
    (61) view_def -> . CREATE VIEW table opt_column_commalist AS query_spec opt_with_check_option
    (66) privilege_def -> . GRANT privileges ON table TO grantee_commalist opt_with_grant_option

    CREATE          shift and go to state 11
    CLOSE           shift and go to state 13
    COMMIT          shift and go to state 19
    DELETE          shift and go to state 14
    FETCH           shift and go to state 4
    INSERT          shift and go to state 6
    OPEN            shift and go to state 2
    ROLLBACK        shift and go to state 29
    SELECT          shift and go to state 5
    UPDATE          shift and go to state 20
    DROP            shift and go to state 15
    GRANT           shift and go to state 26

    commit_statement               shift and go to state 1
    drop_table                     shift and go to state 3
    manipulative_statement         shift and go to state 7
    rollback_statement             shift and go to state 8
    select_statement_1             shift and go to state 9
    close_statement                shift and go to state 10
    select_statement_3             shift and go to state 34
    program                        shift and go to state 12
    schema                         shift and go to state 33
    privilege_def                  shift and go to state 16
    base_table_def                 shift and go to state 17
    open_statement                 shift and go to state 18
    select_statement               shift and go to state 21
    sql                            shift and go to state 22
    update_statement_positioned    shift and go to state 23
    insert_statement               shift and go to state 24
    delete_statement_searched      shift and go to state 25
    view_def                       shift and go to state 27
    delete_statement_positioned    shift and go to state 28
    fetch_statement                shift and go to state 30
    schema_element                 shift and go to state 31
    update_statement_searched      shift and go to state 32
    sql_list                       shift and go to state 35

state 1

    (95) manipulative_statement -> commit_statement .

    SEMICOLON       reduce using rule 95 (manipulative_statement -> commit_statement .)


state 2

    (111) open_statement -> OPEN . cursor
    (90) cursor -> . NAME

    NAME            shift and go to state 37

    cursor                         shift and go to state 36

state 3

    (107) manipulative_statement -> drop_table .

    SEMICOLON       reduce using rule 107 (manipulative_statement -> drop_table .)


state 4

    (116) fetch_statement -> FETCH . cursor INTO target_commalist
    (90) cursor -> . NAME

    NAME            shift and go to state 37

    cursor                         shift and go to state 38

state 5

    (173) select_statement -> SELECT . opt_all_distinct selection INTO target_commalist table_exp
    (140) select_statement_1 -> SELECT . TIMES FROM table WHERE assignment_commalist assign_cond
    (141) select_statement_3 -> SELECT . TIMES FROM table PLUSPLUS
    (174) opt_all_distinct -> .
    (175) opt_all_distinct -> . ALL
    (176) opt_all_distinct -> . DISTINCT

  ! shift/reduce conflict for TIMES resolved as shift
    TIMES           shift and go to state 41
    LPAREN          reduce using rule 174 (opt_all_distinct -> .)
    QUOTE           reduce using rule 174 (opt_all_distinct -> .)
    NUMBER          reduce using rule 174 (opt_all_distinct -> .)
    NAME            reduce using rule 174 (opt_all_distinct -> .)
    AMMSC           reduce using rule 174 (opt_all_distinct -> .)
    ALL             shift and go to state 39
    DISTINCT        shift and go to state 42

  ! TIMES           [ reduce using rule 174 (opt_all_distinct -> .) ]

    opt_all_distinct               shift and go to state 40

state 6

    (124) insert_statement -> INSERT . INTO table opt_column_commalist values_or_query_spec

    INTO            shift and go to state 43


state 7

    (5) sql -> manipulative_statement .

    SEMICOLON       reduce using rule 5 (sql -> manipulative_statement .)


state 8

    (101) manipulative_statement -> rollback_statement .

    SEMICOLON       reduce using rule 101 (manipulative_statement -> rollback_statement .)


state 9

    (104) manipulative_statement -> select_statement_1 .

    SEMICOLON       reduce using rule 104 (manipulative_statement -> select_statement_1 .)


state 10

    (94) manipulative_statement -> close_statement .

    SEMICOLON       reduce using rule 94 (manipulative_statement -> close_statement .)


state 11

    (7) schema -> CREATE . SCHEMA AUTHORIZATION user opt_schema_element_list
    (16) base_table_def -> CREATE . TABLE table LPAREN base_table_element_commalist RPAREN
    (61) view_def -> CREATE . VIEW table opt_column_commalist AS query_spec opt_with_check_option

    SCHEMA          shift and go to state 46
    TABLE           shift and go to state 44
    VIEW            shift and go to state 45


state 12

    (0) S' -> program .



state 13

    (112) close_statement -> CLOSE . cursor
    (90) cursor -> . NAME

    NAME            shift and go to state 37

    cursor                         shift and go to state 47

state 14

    (115) delete_statement_positioned -> DELETE . FROM table WHERE CURRENT OF cursor
    (136) delete_statement_searched -> DELETE . FROM table opt_where_clause

    FROM            shift and go to state 48


state 15

    (110) drop_table -> DROP . TABLE table

    TABLE           shift and go to state 49


state 16

    (15) schema_element -> privilege_def .

    CREATE          reduce using rule 15 (schema_element -> privilege_def .)
    GRANT           reduce using rule 15 (schema_element -> privilege_def .)
    SEMICOLON       reduce using rule 15 (schema_element -> privilege_def .)


state 17

    (13) schema_element -> base_table_def .

    CREATE          reduce using rule 13 (schema_element -> base_table_def .)
    GRANT           reduce using rule 13 (schema_element -> base_table_def .)
    SEMICOLON       reduce using rule 13 (schema_element -> base_table_def .)


state 18

    (100) manipulative_statement -> open_statement .

    SEMICOLON       reduce using rule 100 (manipulative_statement -> open_statement .)


state 19

    (113) commit_statement -> COMMIT . WORK

    WORK            shift and go to state 50


state 20

    (144) update_statement_positioned -> UPDATE . table SET assignment_commalist WHERE assignment_commalist assign_cond
    (158) update_statement_searched -> UPDATE . table SET assignment_commalist opt_where_clause
    (18) table -> . NAME
    (19) table -> . NAME DOT NAME
    (108) table -> . ID
    (109) table -> . ID DOT ID

    NAME            shift and go to state 53
    ID              shift and go to state 52

    table                          shift and go to state 51

state 21

    (102) manipulative_statement -> select_statement .

    SEMICOLON       reduce using rule 102 (manipulative_statement -> select_statement .)


state 22

    (2) sql_list -> sql . SEMICOLON

    SEMICOLON       shift and go to state 54


state 23

    (103) manipulative_statement -> update_statement_positioned .

    SEMICOLON       reduce using rule 103 (manipulative_statement -> update_statement_positioned .)


state 24

    (99) manipulative_statement -> insert_statement .

    SEMICOLON       reduce using rule 99 (manipulative_statement -> insert_statement .)


state 25

    (97) manipulative_statement -> delete_statement_searched .

    SEMICOLON       reduce using rule 97 (manipulative_statement -> delete_statement_searched .)


state 26

    (66) privilege_def -> GRANT . privileges ON table TO grantee_commalist opt_with_grant_option
    (69) privileges -> . ALL PRIVILEGES
    (70) privileges -> . ALL
    (71) privileges -> . operation_commalist
    (72) operation_commalist -> . operation
    (73) operation_commalist -> . operation_commalist COMMA operation
    (74) operation -> . SELECT
    (75) operation -> . INSERT
    (76) operation -> . DELETE
    (77) operation -> . UPDATE opt_column_commalist
    (78) operation -> . REFERENCES opt_column_commalist

    ALL             shift and go to state 57
    SELECT          shift and go to state 62
    INSERT          shift and go to state 58
    DELETE          shift and go to state 63
    UPDATE          shift and go to state 55
    REFERENCES      shift and go to state 60

    privileges                     shift and go to state 56
    operation_commalist            shift and go to state 59
    operation                      shift and go to state 61

state 27

    (14) schema_element -> view_def .

    CREATE          reduce using rule 14 (schema_element -> view_def .)
    GRANT           reduce using rule 14 (schema_element -> view_def .)
    SEMICOLON       reduce using rule 14 (schema_element -> view_def .)


state 28

    (96) manipulative_statement -> delete_statement_positioned .

    SEMICOLON       reduce using rule 96 (manipulative_statement -> delete_statement_positioned .)


state 29

    (114) rollback_statement -> ROLLBACK . WORK

    WORK            shift and go to state 64


state 30

    (98) manipulative_statement -> fetch_statement .

    SEMICOLON       reduce using rule 98 (manipulative_statement -> fetch_statement .)


state 31

    (6) sql -> schema_element .

    SEMICOLON       reduce using rule 6 (sql -> schema_element .)


state 32

    (106) manipulative_statement -> update_statement_searched .

    SEMICOLON       reduce using rule 106 (manipulative_statement -> update_statement_searched .)


state 33

    (4) sql -> schema .

    SEMICOLON       reduce using rule 4 (sql -> schema .)


state 34

    (105) manipulative_statement -> select_statement_3 .

    SEMICOLON       reduce using rule 105 (manipulative_statement -> select_statement_3 .)


state 35

    (1) program -> sql_list .
    (3) sql_list -> sql_list . sql SEMICOLON
    (4) sql -> . schema
    (5) sql -> . manipulative_statement
    (6) sql -> . schema_element
    (7) schema -> . CREATE SCHEMA AUTHORIZATION user opt_schema_element_list
    (94) manipulative_statement -> . close_statement
    (95) manipulative_statement -> . commit_statement
    (96) manipulative_statement -> . delete_statement_positioned
    (97) manipulative_statement -> . delete_statement_searched
    (98) manipulative_statement -> . fetch_statement
    (99) manipulative_statement -> . insert_statement
    (100) manipulative_statement -> . open_statement
    (101) manipulative_statement -> . rollback_statement
    (102) manipulative_statement -> . select_statement
    (103) manipulative_statement -> . update_statement_positioned
    (104) manipulative_statement -> . select_statement_1
    (105) manipulative_statement -> . select_statement_3
    (106) manipulative_statement -> . update_statement_searched
    (107) manipulative_statement -> . drop_table
    (13) schema_element -> . base_table_def
    (14) schema_element -> . view_def
    (15) schema_element -> . privilege_def
    (112) close_statement -> . CLOSE cursor
    (113) commit_statement -> . COMMIT WORK
    (115) delete_statement_positioned -> . DELETE FROM table WHERE CURRENT OF cursor
    (136) delete_statement_searched -> . DELETE FROM table opt_where_clause
    (116) fetch_statement -> . FETCH cursor INTO target_commalist
    (124) insert_statement -> . INSERT INTO table opt_column_commalist values_or_query_spec
    (111) open_statement -> . OPEN cursor
    (114) rollback_statement -> . ROLLBACK WORK
    (173) select_statement -> . SELECT opt_all_distinct selection INTO target_commalist table_exp
    (144) update_statement_positioned -> . UPDATE table SET assignment_commalist WHERE assignment_commalist assign_cond
    (140) select_statement_1 -> . SELECT TIMES FROM table WHERE assignment_commalist assign_cond
    (141) select_statement_3 -> . SELECT TIMES FROM table PLUSPLUS
    (158) update_statement_searched -> . UPDATE table SET assignment_commalist opt_where_clause
    (110) drop_table -> . DROP TABLE table
    (16) base_table_def -> . CREATE TABLE table LPAREN base_table_element_commalist RPAREN
    (61) view_def -> . CREATE VIEW table opt_column_commalist AS query_spec opt_with_check_option
    (66) privilege_def -> . GRANT privileges ON table TO grantee_commalist opt_with_grant_option

    $end            reduce using rule 1 (program -> sql_list .)
    CREATE          shift and go to state 11
    CLOSE           shift and go to state 13
    COMMIT          shift and go to state 19
    DELETE          shift and go to state 14
    FETCH           shift and go to state 4
    INSERT          shift and go to state 6
    OPEN            shift and go to state 2
    ROLLBACK        shift and go to state 29
    SELECT          shift and go to state 5
    UPDATE          shift and go to state 20
    DROP            shift and go to state 15
    GRANT           shift and go to state 26
